# nahmanboot_old

./: .gitignore  LICENSE  README.md  SUPPORT.md  compile.sh  makefile
bootloader/: CMakeLists.txt
bootloader/include/drivers/acpi/: init.h  powermodes.h  table.h
bootloader/include/drivers/apic/: idt.h  lapic.h  main.h  pic.h
bootloader/include/drivers/disk/: ahci.h  ata.h  defs.h  ide.h  main.h  nvme.h
bootloader/include/drivers/fs/: ext2.h  gpt.h  partition.h
bootloader/include/drivers/io/: ioport.h
bootloader/include/drivers/kernels/: config.h  e820map.h  elf.h  linuxboot.h  multiboot.h  node.h
bootloader/include/drivers/pci/: defs.h  device.h  enum.h  general.h  main.h  pci.h  pcie.h
bootloader/include/drivers/x86/: paging.h
bootloader/include/memory/: bump_alloc.h
bootloader/lib/libc/: nahman.c  nahman.h  stdint.h  stdmath.c  stdmath.h  string.c  string.h
bootloader/src/: main.c  main.h
bootloader/src/boot/: load.asm
bootloader/src/drivers/acpi/: init.c  powermodes.c  table.c
bootloader/src/drivers/apic/: idt.c  lapic.c  main.c  pic.c
bootloader/src/drivers/disk/: ahci.c  ide.c  main.c  nvme.c
bootloader/src/drivers/fs/: ext2.c  parition.c
bootloader/src/drivers/kernels/: config.c  elf.c  multiboot.c
bootloader/src/drivers/pci/: device.c  enum.c  general.c  main.c  pci.c  pcie.c
bootloader/src/drivers/vga/: framebuffer.c
bootloader/src/drivers/x86/: paging.c
bootloader/src/memory/: bump_alloc.c
bootstrapper/: boot32.asm
userspace/: nahmanboot.cfg
